# license-signer

./: Cargo.toml  README.md
src/: main.rs  signatory.rs  transaction.rs
