[package]
name = "license-signer"
version = "0.2.0"
edition = "2021"
description = "Simple CLI License Generator written in Rust"
license = "MIT"
repository = "https://github.com/rudolfmuller/license-signer.git"
readme = "README.md"
keywords = ["cli", "license", "rust"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "2.0.18"
anyhow = "1.0.102"
dirs = "6.0.0"
chrono = "0.4.44"
colored_text = "0.4.1"
clap = { version = "4.6.0", features = ["derive"] }
